adding expleinations for statistics module

--- a/nbs/03statistics.ipynb
+++ b/nbs/03statistics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_19744\\399268847.py:5: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "#|export\n",
     "\n",
@@ -47,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +96,14 @@
     "      \n",
     "\n",
     "  def _get_split_data_(self):\n",
+    "      \"\"\" \n",
+    "     Takes list of paths to images from the type  and extract the split group.\n",
+    "     \n",
+    "     Parameters:\n",
+    "     self\n",
+    "     Returns:\n",
+    "     string: pd.DataFrame contains all the paths, image id and the split group.\n",
+    "      \"\"\"\n",
     "\n",
     "      self.collect_dfs = []\n",
     "      for split_path in self.path_to_split_file:\n",
@@ -123,7 +146,17 @@
     "  def _img_statistics_(self,\n",
     "                       path : str , # path to image (tif file)\n",
     "                       ):\n",
+    "\n",
+    "     \"\"\"\n",
+    "     recieves path of image, returns statistics per image \n",
+    "     Parameters:\n",
+    "     path (str): The path to the TIFF file.\n",
+    "\n",
+    "     Returns:\n",
+    "     pd.DataFrame  with statistics for the given image \n",
+    "     \"\"\"                      \n",
     "     \n",
+    "\n",
     "     with rasterio.open(path) as src:\n",
     "      \n",
     "      src_arr = src.read()\n",
@@ -154,7 +187,7 @@
     "\n",
     "\n",
     "  def _iterate_tiles_(self):\n",
-    "   \n",
+    "\n",
     "   self.collect_info = {CONST.PATH_STR : [] , CONST.REGION_STR : []}\n",
     "   self.collect_stats = []\n",
     "\n",
@@ -188,25 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/399 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 80/399 [00:12<00:50,  6.28it/s]C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_12932\\1601110469.py:89: RuntimeWarning: Mean of empty slice\n",
+      " 20%|██        | 80/399 [00:13<00:51,  6.24it/s]C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_19744\\1601110469.py:89: RuntimeWarning: Mean of empty slice\n",
       "  mean = np.nanmean(arr)\n",
       "d:\\git\\flood_exercise\\.venv\\Lib\\site-packages\\numpy\\lib\\nanfunctions.py:1879: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
       "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
-      "100%|██████████| 399/399 [01:20<00:00,  4.98it/s]\n"
+      "100%|██████████| 399/399 [01:05<00:00,  6.08it/s]\n"
      ]
     },
     {
@@ -579,7 +605,7 @@
        "[399 rows x 32 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -618,83 +644,114 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>region</th>\n",
-       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>split</th>\n",
+       "      <th>name_for_join</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>USA</th>\n",
-       "      <td>69</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Ghana_1078550_LabelHand.tif</td>\n",
+       "      <td>test</td>\n",
+       "      <td>Ghana_1078550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>India</th>\n",
-       "      <td>68</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Ghana_1078550_S1Hand.tif</td>\n",
+       "      <td>test</td>\n",
+       "      <td>Ghana_1078550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ghana</th>\n",
-       "      <td>53</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Ghana_141271_LabelHand.tif</td>\n",
+       "      <td>test</td>\n",
+       "      <td>Ghana_141271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Sri-Lanka</th>\n",
-       "      <td>42</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Ghana_141271_S1Hand.tif</td>\n",
+       "      <td>test</td>\n",
+       "      <td>Ghana_141271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Paraguay</th>\n",
-       "      <td>33</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Ghana_167233_LabelHand.tif</td>\n",
+       "      <td>test</td>\n",
+       "      <td>Ghana_167233</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mekong</th>\n",
-       "      <td>30</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Spain</th>\n",
-       "      <td>30</td>\n",
+       "      <th>173</th>\n",
+       "      <td>USA_761032_S1Hand.tif</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>USA_761032</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Pakistan</th>\n",
-       "      <td>28</td>\n",
+       "      <th>174</th>\n",
+       "      <td>USA_826217_LabelHand.tif</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>USA_826217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Nigeria</th>\n",
-       "      <td>18</td>\n",
+       "      <th>175</th>\n",
+       "      <td>USA_826217_S1Hand.tif</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>USA_826217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Bolivia</th>\n",
-       "      <td>15</td>\n",
+       "      <th>176</th>\n",
+       "      <td>USA_986268_LabelHand.tif</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>USA_986268</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Somalia</th>\n",
-       "      <td>13</td>\n",
+       "      <th>177</th>\n",
+       "      <td>USA_986268_S1Hand.tif</td>\n",
+       "      <td>valid</td>\n",
+       "      <td>USA_986268</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>892 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           count\n",
-       "region          \n",
-       "USA           69\n",
-       "India         68\n",
-       "Ghana         53\n",
-       "Sri-Lanka     42\n",
-       "Paraguay      33\n",
-       "Mekong        30\n",
-       "Spain         30\n",
-       "Pakistan      28\n",
-       "Nigeria       18\n",
-       "Bolivia       15\n",
-       "Somalia       13"
+       "                              id  split  name_for_join\n",
+       "0    Ghana_1078550_LabelHand.tif   test  Ghana_1078550\n",
+       "1       Ghana_1078550_S1Hand.tif   test  Ghana_1078550\n",
+       "2     Ghana_141271_LabelHand.tif   test   Ghana_141271\n",
+       "3        Ghana_141271_S1Hand.tif   test   Ghana_141271\n",
+       "4     Ghana_167233_LabelHand.tif   test   Ghana_167233\n",
+       "..                           ...    ...            ...\n",
+       "173        USA_761032_S1Hand.tif  valid     USA_761032\n",
+       "174     USA_826217_LabelHand.tif  valid     USA_826217\n",
+       "175        USA_826217_S1Hand.tif  valid     USA_826217\n",
+       "176     USA_986268_LabelHand.tif  valid     USA_986268\n",
+       "177        USA_986268_S1Hand.tif  valid     USA_986268\n",
+       "\n",
+       "[892 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "instance.split_dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "instance.count_regions"
    ]
@@ -743,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
