--- a/nbs/04NDWI.ipynb
+++ b/nbs/04NDWI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5360\\1674269333.py:4: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "#|export\n",
     "import rasterio\n",
@@ -44,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +107,15 @@
     "\n",
     "  def _ndwi_s2_(self ,\n",
     "                     path):\n",
-    "         \n",
+    "         \"\"\"\n",
+    "         Recieves path of image, returns NDWI per image\n",
+    "         :\n",
+    "         path (str): The path to the TIFF file.\n",
+    "\n",
+    "         Returns:\n",
+    "         np.array with NDWI values per pixel\n",
+    "         \"\"\"                      \n",
+    "     \n",
     "         with rasterio.open(path) as src:\n",
     "            green = src.read(CONST.GREEN_BAND)\n",
     "            nir = src.read(CONST.NIR_BAND)\n",
@@ -105,7 +128,16 @@
     "\n",
     "  def _get_ndwi_threshold_(self,\n",
     "                           ):\n",
-    "    \n",
+    "                           \n",
+    "       \"\"\"\n",
+    "       This function takes the path of an image and calculates the Normalized Difference Water Index (NDWI) for each image.\n",
+    "\n",
+    "       Parameters:\n",
+    "         paths (list): A list of file paths to the TIFF images.\n",
+    "\n",
+    "       Returns:\n",
+    "        list: A list containing two values representing the minimum and maximum NDWI values calculated based on the provided images.\n",
+    "       \"\"\"\n",
     "       threshold = [None , None]\n",
     "\n",
     "       #for each image , calculate NDWI ,get the match labled image\n",
@@ -151,6 +183,16 @@
     "                           path : str , # path to raster image\n",
     "                           ):\n",
     "\n",
+    "        \"\"\"\n",
+    "        This function takes the path of S2 image, calculates the Normalized Difference Water Index (NDWI) for each image,\n",
+    "        and then calculate the percentage of water pixels in the image \n",
+    "        Parameters:\n",
+    "          paths (str): A list of file paths to the LABELED TIFF images.\n",
+    "\n",
+    "        Returns:\n",
+    "        float: the percentage of water pixels in the labeled image\n",
+    "        \"\"\"      \n",
+    "     \n",
     "        #calcualte NDWI\n",
     "        ndwi = self._ndwi_s2_(path)\n",
     "\n",
@@ -178,6 +220,16 @@
     "  def _water_perc_label_img_(self,\n",
     "                             path : str , # path to labeled image\n",
     "                             ):\n",
+    "\n",
+    "      \"\"\"\n",
+    "      This function takes the path of LABELED image and calculates the % of pixels labeles as water\n",
+    "\n",
+    "      Parameters:\n",
+    "        paths (str): A list of file paths to the LABELED TIFF images.\n",
+    "\n",
+    "      Returns:\n",
+    "      float: the percentage of water pixels in the labeled image\n",
+    "      \"\"\"      \n",
     "      \n",
     "      with rasterio.open(path) as src:\n",
     "          #read the image as numpy array\n",
@@ -192,150 +244,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_9184\\1036448553.py:50: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5360\\2409908850.py:58: RuntimeWarning: invalid value encountered in divide\n",
       "  ndwi = (green - nir) / (green + nir)\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'ndwi' object has no attribute 'collector'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m instance \u001b[38;5;241m=\u001b[39m \u001b[43mndwi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_s2_tiles\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                \u001b[49m\u001b[43mpath_to_labeled_tiles\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgit\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mflood_exercise\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mS2_HANDLABELED\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m instance\u001b[38;5;241m.\u001b[39mcollector\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# instance.water_perc.to_csv(r'D:\\git\\flood_exercise\\RESULTS\\water_perc_Bolivia.csv')\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[13], line 41\u001b[0m, in \u001b[0;36mndwi.__init__\u001b[1;34m(self, path_to_s2_tiles, path_to_labeled_tiles)\u001b[0m\n\u001b[0;32m     38\u001b[0m     collector[CONST\u001b[38;5;241m.\u001b[39mWATER_DF_WATER_PERC_LABEL_STR]\u001b[38;5;241m.\u001b[39mappend(label_water_perc)\n\u001b[0;32m     39\u001b[0m     collector[CONST\u001b[38;5;241m.\u001b[39mWATER_DF_PATH_STR]\u001b[38;5;241m.\u001b[39mappend(s2_path)\n\u001b[1;32m---> 41\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwater_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollector\u001b[49m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ndwi' object has no attribute 'collector'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tile_id</th>\n",
+       "      <th>water_perc</th>\n",
+       "      <th>water_label_perc</th>\n",
+       "      <th>path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>417184</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1396181</td>\n",
+       "      <td>57.02</td>\n",
+       "      <td>55.32</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1191208</td>\n",
+       "      <td>4.69</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1248200</td>\n",
+       "      <td>75.63</td>\n",
+       "      <td>78.04</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Hand...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>900498</td>\n",
+       "      <td>58.69</td>\n",
+       "      <td>47.28</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\India_900498_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>394</th>\n",
+       "      <td>741178</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>761032</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>4.62</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>955053</td>\n",
+       "      <td>5.62</td>\n",
+       "      <td>13.67</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>986268</td>\n",
+       "      <td>1.89</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>58086</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>6.06</td>\n",
+       "      <td>D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>399 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     tile_id  water_perc  water_label_perc  \\\n",
+       "0     417184        0.81              0.53   \n",
+       "1    1396181       57.02             55.32   \n",
+       "2    1191208        4.69              5.82   \n",
+       "3    1248200       75.63             78.04   \n",
+       "4     900498       58.69             47.28   \n",
+       "..       ...         ...               ...   \n",
+       "394   741178        2.67              0.55   \n",
+       "395   761032        3.02              4.62   \n",
+       "396   955053        5.62             13.67   \n",
+       "397   986268        1.89              3.47   \n",
+       "398    58086        0.91              6.06   \n",
+       "\n",
+       "                                                  path  \n",
+       "0    D:\\git\\flood_exercise\\S2\\Nigeria_417184_S2Hand...  \n",
+       "1    D:\\git\\flood_exercise\\S2\\Mekong_1396181_S2Hand...  \n",
+       "2    D:\\git\\flood_exercise\\S2\\Mekong_1191208_S2Hand...  \n",
+       "3    D:\\git\\flood_exercise\\S2\\Mekong_1248200_S2Hand...  \n",
+       "4     D:\\git\\flood_exercise\\S2\\India_900498_S2Hand.tif  \n",
+       "..                                                 ...  \n",
+       "394     D:\\git\\flood_exercise\\S2\\USA_741178_S2Hand.tif  \n",
+       "395     D:\\git\\flood_exercise\\S2\\USA_761032_S2Hand.tif  \n",
+       "396     D:\\git\\flood_exercise\\S2\\USA_955053_S2Hand.tif  \n",
+       "397     D:\\git\\flood_exercise\\S2\\USA_986268_S2Hand.tif  \n",
+       "398      D:\\git\\flood_exercise\\S2\\USA_58086_S2Hand.tif  \n",
+       "\n",
+       "[399 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "instance = ndwi(path_to_s2_tiles = r\"D:\\git\\flood_exercise\\S2\",\n",
     "                path_to_labeled_tiles= r\"D:\\git\\flood_exercise\\S2_HANDLABELED\")\n",
-    "instance.df_water\n",
+    "instance.water_df\n",
     "# instance.water_perc.to_csv(r'D:\\git\\flood_exercise\\RESULTS\\water_perc_Bolivia.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "src = rasterio.open(r'D:\\git\\flood_exercise\\S2_HANDLABELED\\Bolivia_23014_LabelHand.tif')\n",
-    "arr = src.read()\n",
-    "np.count_nonzero(arr == -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.count_nonzero(arr == -1)+np.count_nonzero(arr == 0)+np.count_nonzero(arr == 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr.shape[2]*arr.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "instance.test[:100,:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "instance.labels[0].split(\"\\\\\")[-1].split('_')[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#|export\n",
-    "\n",
-    "class ndwi():\n",
-    "\n",
-    "  def __init__(self,\n",
-    "      path_to_imgs : str , # path to the folder that contains the images\n",
-    "      ):\n",
-    "     \n",
-    "     # get list of tif files\n",
-    "     self.list_of_files = utils_func.load_list_paths(path_to_imgs,filter_file = True)\n",
-    "     self.list_of_files = [x for x in self.list_of_files if 'Bolivia' in x]\n",
-    "     \n",
-    "     collector = {CONST.IMG_PATH_WATER_STR : [] , CONST.WATER_PERC_STR : []}\n",
-    "     # calculate NDWI and NDWI mask per image\n",
-    "     for path in self.list_of_files:\n",
-    "         self.ndwi_img ,self.mask , self.perc_water = self._ndwi_s2_(path)\n",
-    "         collector[CONST.IMG_PATH_WATER_STR].append(path)\n",
-    "         collector[CONST.WATER_PERC_STR].append(self.perc_water)\n",
-    "\n",
-    "     self.water_perc = pd.DataFrame(collector)\n",
-    "           \n",
-    "  def _ndwi_s2_(self ,\n",
-    "                     path):\n",
-    "         \n",
-    "         with rasterio.open(path) as src:\n",
-    "            green = src.read(CONST.GREEN_BAND)\n",
-    "            nir = src.read(CONST.NIR_BAND)\n",
-    "\n",
-    "            ndwi = (green - nir) / (green + nir)\n",
-    "\n",
-    "            # Replace NaN values with 0\n",
-    "            ndwi = np.nan_to_num(ndwi, nan=-1)\n",
-    "            # generate mask \n",
-    "            mask = np.where(ndwi<0 ,0 ,1)\n",
-    "\n",
-    "            #calculate precentage of water pixel out of all the pixels in the image\n",
-    "            # count_water_pixels = np.sum(mask)\n",
-    "            # total_pixels = mask.shape[0]*mask.shape[1]\n",
-    "            perc_water = round((np.sum(mask) / (mask.shape[0]*mask.shape[1]))*100,2)\n",
-    "         return ndwi , mask ,perc_water\n",
-    "     \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "instance = ndwi(path_to_imgs = r\"D:\\git\\flood_exercise\\S2\")\n",
-    "instance.water_perc.to_csv(r'D:\\git\\flood_exercise\\RESULTS\\water_perc_Bolivia.csv')"
    ]
   },
   {
@@ -362,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
